--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,12 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "joselfonseca/lighthouse-graphql-passport-auth": "^6.0",
         "laravel/framework": "^8.75",
+        "laravel/passport": "^10.3",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "nuwave/lighthouse": "^5.40"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
